# Assignment3_CProgramming-

./: CMakeLists.txt  Main.c  Opgave 3 problem 1 længde af vektorere.docx  main.c  main3.c
helperClasses/: Roof.c  Roof.h  RoofTree.c  RoofTree.h
roofDataStructures/: Roof.c  Roof.h  RoofTree.c  waterCalc.c  waterCalc.h
